Bug 146190 - Tab after going to a drawing object from the Navigator doesn't change the focus to the next object (see comment 4)
Summary: Tab after going to a drawing object from the Navigator doesn't change the foc...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2021-12-11 23:25 UTC by Jim Raykowski
Modified: 2024-04-20 16:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test file with repro steps (20.45 KB, application/vnd.oasis.opendocument.text)
2021-12-11 23:25 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2021-12-11 23:25:02 UTC
Created attachment 176879 [details]
test file with repro steps

Please see steps to repro in the attached test file.
Comment 1 Rainer Bielefeld Retired 2021-12-12 07:07:08 UTC
Reporter's observations are REPRODUCIBLE with reporter's sample document and STR Installation of Version 7.2.3.2 (x64) / LibreOffice Build  d166454616c1632304285822f9c83ce2e660fd92; CPU threads: 12; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win; Locale: de-DE (de_DE); UI: de-DE; Calc: threaded;  Elementary Theme; My normal User Profile

But I'm not sure what might be bug and what might be intended feature ...

The behavior also depends on cursor position. I tried with reporter's document and added a step 1.1 to his STR:

11)   Open either sidebar ctrl+F5 or floating F5 Navigator
11.1) press key <ArrowDown>
       » Caret flashes left from "1) ..."
12)   Double click on Shape 1
13)   Press Tab key
       » Shape selection switches to Shape 2, more <TAB> always will switch 
         selection between shapes

Let's try something else
21)   Open either sidebar ctrl+F5 or floating F5 Navigator
21.1) Click left from "Heading 1"
       » Caret flashes left from "Heading 1"
22)   Double click on Shape 1
23)   Press Tab key
       » nothing happens

I also managed to get "Heading 1" through many formattings with each <TAB>, but I can't remember the conditions how I did.

Do we have some help text telling what the expected behavior should be?
Comment 2 Rainer Bielefeld Retired 2021-12-12 10:15:48 UTC
Already REPRODUCIBLE with Server Installation of Version:  4.0.0.3 WIN10
Build-ID  7545bee9c2a0782548772a21bc84a9dcc583b89; Special devUserProfile
Comment 3 Jim Raykowski 2022-01-05 23:35:52 UTC
Looking at this again I see my STR need clarification. One could take step two to mean double click on 'Shape 1' in the document. If that is done before the steps to repro, the bug does not occur.

Steps to repro using the attached 'test file with repro steps' file:

1) Open either sidebar ctrl+F5 or floating F5 Navigator

2) In the Navigator expand the Drawing objects category, if needed, then double click on the 'Shape 1' entry in the list of drawing objects.

Shape 1 in the document is selected

3) Press Tab key

Results: A tab space is applied before all headings in the document

Expected result: Selected drawing object in the document changes to Shape 2.
Comment 4 Buovjaga 2022-11-30 13:37:20 UTC
The behaviour changed in 7.4 with https://git.libreoffice.org/core/commit/ba2c5e05319181aa00357d66ba2fbaba20231bd3
Resolves tdf#146762 - Consistency for list indent and level shortcuts

Now there is no indentation, but no focus change either. If I double-click a second time, the focus change starts working.
Comment 5 Jim Raykowski 2024-04-15 06:57:40 UTC
Proposed patch:
https://gerrit.libreoffice.org/c/core/+/166089
Comment 6 Commit Notification 2024-04-20 16:14:07 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca66965507494d0c5e07bfe81334749bc08af409

tdf#146190 Fix move to next drawing object using the tab key

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.