tdf#146190 Fix move to next drawing object using the tab key

after double click on a drawing obect in the Navigator doesn't move to
the next/previous drawing object when there is a number rule at the
current current cursor position and the current cursor position is at
the start of a paragraph.

This patch reworks the SwWrtShell::GotoDrawingObject function so the
document cursor position gets moved to the position of the drawing
object when the object is selected.

Another way to get expected results is to leave the GotoDrawingObject
function as is and move:

  else if (rSh.GetSelectionType() &
           (SelectionType::Graphic |
            SelectionType::Frame |
            SelectionType::Ole |
            SelectionType::DrawObject |
            SelectionType::DbForm))

above the:

  else if( rSh.GetNumRuleAtCurrCursorPos()
           && rSh.IsSttOfPara()
           && !rSh.HasReadonlySel() )

in the SwEditWin::KeyInput function case KEY_TAB: block.

SwWrtShell::GotoDrawingObject is made SW_DLLPUBIC by this patch to able
to be used by the included unit test.

Change-Id: I047b416ae94a9284d304798924e0c5f2be526f85
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166089
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>